--- a/style.css
+++ b/style.css
@@ -77,8 +77,13 @@ div {
     margin-left: auto;
 }
 
+#instagram {
+    padding-left: 2%;
+}
+
 #twitter {
     margin-right: 5%;
+    padding-left: 2%;
 }
 
 a {
