--- a/contact.css
+++ b/contact.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     background-color: snow;
     background-image: url("form-image.jpg");
+    background-repeat: no-repeat;
     background-size: cover;
     overflow-y: hidden;
     overflow-x: hidden;
